--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>Azrin's Portfolio</title>
 
-    <meta name="description" content="">
+    <meta name="description" content=>
     <meta name="author" content="">
     <meta name="keywords" content="">
 
